--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h2 {
+  margin: 20px 5% 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p {
+  margin: 5px 5% 10px;
+  color: #c5c5c5;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.list-smiley {
+  background-color: #ececec;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0.1px 0px;
+}
+
+li {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
+  line-height: 40px;
+  background-color: #fff;
+  margin: 1%;
 }
 
-.App-link {
-  color: #61dafb;
+.smiley {
+  font-size: 25px;
+  cursor: pointer;
+  background: none;
+  border: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.smiley:hover {
+  transform: scale(1.3);
+}
+
+.resbttn {
+  font-size: 20px;
+  cursor: pointer;
+  padding: 5px;
+  background-color: #ececec;
+  border: solid 1px #c5c5c5;
+}
+
+.resbttn:hover {
+  background-color: #e0e0e0;
+  border: solid 1px #c5c5c5;
+  transform: scale(1.03);
+}
+
+span {
+  font-size: 1.2em;
 }
